# monorepo-base

./: .bazelrc  .cirrus.yml  .gitignore  BUILD.bazel  LICENSE  Makefile  README.md  WORKSPACE  docker-compose.yml  go.mod  go.sum
cmd/ping/: BUILD.bazel
cmd/ping-go-client/: BUILD.bazel  main.go
cmd/ping-rust/: BUILD.bazel
cmd/ping-rust-client/: BUILD.bazel  ping.rs
cmd/setup/: BUILD.bazel  main.go
cmd/setup/internal/gcloud/: BUILD.bazel  helpers.go  main.go
config/: k8s.bzl
docs/: deploying-infrastructure.md  potential.md
docs/development/: quickstart.md  working-with-go.md
docs/services/: anatomy.md  deploying.md  manifests.md
services/: BUILD.bazel  container.libsonnet  deployment.libsonnet  microservice.libsonnet  service.libsonnet
services/buildfarm/server/: BUILD.bazel  server.config  staging.jsonnet
services/buildfarm/worker/: BUILD.bazel  staging.jsonnet  worker.config
services/ping/: BUILD.bazel  main.go
services/ping/manifests/: BUILD.bazel  production.jsonnet  staging.jsonnet
services/ping/proto/: BUILD.bazel  ping.pb.go  ping.proto
services/ping/server/: BUILD.bazel  server.go  server_test.go
terraform/: main.tf  outputs.tf  provider.tf  terraform.tfvars.json  variables.tf
