load("@io_bazel_rules_rust//rust:rust.bzl", "rust_binary")
load("@io_bazel_rules_rust//proto:toolchain.bzl", "GRPC_COMPILE_DEPS")

rust_binary(
    name = "ping",
    srcs = ["ping.rs"],
    deps = [
        "//services/ping/proto:ping_rust_grpc",
        "//third_party/cargo:clap",
    ] + GRPC_COMPILE_DEPS,
    visibility = ["//visibility:public"],
)

