load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/enginoid/monorepo-base/cmd/setup",
    visibility = ["//visibility:private"],
    deps = [
        "//cmd/setup/internal/gcloud:go_default_library",
        "@com_github_songmu_prompter//:go_default_library",
        "@com_github_urfave_cli_v2//:go_default_library",
        "@com_google_cloud_go//container/apiv1:go_default_library",
    ],
)

go_binary(
    name = "setup",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
