load("@io_bazel_rules_docker//container:image.bzl", "container_image")
load("@io_bazel_rules_jsonnet//jsonnet:jsonnet.bzl", "jsonnet_to_json")
load("@k8s_staging//:defaults.bzl", "k8s_staging")

container_image(
    name = "docker_image",
    base = "@rbe_ubuntu//image",
    cmd = [
        "java",
        "-jar",
        "/buildfarm-operationqueue-worker_deploy.jar",
        "/worker.config",
    ],
    files = [
        "@bazel_buildfarm//src/main/java/build/buildfarm:buildfarm-operationqueue-worker_deploy.jar",
        "worker.config"
    ],
    ports = [
        "8980",
    ],
)

jsonnet_to_json(
    name = "staging",
    src = "staging.jsonnet",
    outs = ["staging.json"],
    deps = [
        "//services:deploy_lib",
    ],
    yaml_stream = 1,
)

k8s_staging(
    name = "buildfarm-worker-staging",
    template = ":staging.json",
    images = {
        "eu.gcr.io/monorepo-base/buildfarm-worker:staging": ":docker_image",
    },
)