load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "ping_proto",
    srcs = ["ping.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "ping_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/enginoid/monorepo-base/services/ping/proto",
    proto = ":ping_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    embed = [":ping_go_proto"],
    importpath = "github.com/enginoid/monorepo-base/services/ping/proto",
    visibility = ["//visibility:public"],
)
