load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["server.go"],
    importpath = "github.com/enginoid/monorepo-base/services/ping/server",
    visibility = ["//visibility:public"],
    deps = ["//services/ping/proto:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["server_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//services/ping/proto:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
    ],
)
